# linux-4.14_16ton

./: --dry-run  .config  .gitignore  MAINTAINERS  README.md  changelog-16ton  config-2018-05-24  config-dec-10-17  config-dec-9-17  config-newest_use_this  config-unknown  patch-4.14.40-41.xz  patch-4.14.41-42.xz  patch-4.14.42-43.xz  reject  usb-mtp-setup
CURRENTLY_APPLIED_PATCHES/: arch-4.14.10-patch.patch  arch-4.14.17.patch  arch-4.14.20.patch  arch-4.14.28.patch  drivers-4.14.10-patch.patch  drivers-4.14.17.patch  drivers-4.14.20.patch  drivers-4.14.28.patch  fs-4.14.17.patch  fs-4.14.20.patch  fs-4.14.28.patch  include-4.14.10-patch.patch  include-4.14.20.patch  include-4.14.28.patch  linux-4.14.14-fs.patch  linux-4.14.14-net.patch  linux-4.14.14-sound.patch  linux-4.14.24-drivers.patch  linux-4.14.24-include.patch  net-4.14.17.patch  net-4.14.28.patch  reenable_export_vfs_read-write.patch  scripts-4.14.20.patch  scripts-4.14.28.patch  sound-4.14.10-patch.patch  sound-4.14.28.patch
PATCHES_BEST-from-gpd/: FIRMWARE_NEED_TO_ADD_TO_KERNSRC  config-4.8.17-arcman-wifibroadcast-16ton  config-4.8.17-wifihacks-for-non-asus-machines  patch-kernel.sh  (+2 more)
out-of-tree/xtables/xtables-addons-2.12/: .gitignore  INSTALL  Makefile.mans.in  README  configure.ac  xtables-addons.8.in
out-of-tree/xtables/xtables-addons-2.12/debian/: NEWS  changelog  control  copyright  rules  rules.modules  watch  xtables-addons-common.install  xtables-addons-common.manpages  xtables-addons-dkms.dkms.in
out-of-tree/xtables/xtables-addons-2.12/doc/: changelog.txt
out-of-tree/xtables/xtables-addons-2.12/extensions/: compat_xtables.h  libxt_DHCPMAC.c  libxt_IPMARK.c  libxt_LOGMARK.c  libxt_TARPIT.man  libxt_dhcpmac.c  libxt_dhcpmac.man  libxt_fuzzy.man  libxt_gradm.c  libxt_iface.man  libxt_ipp2p.man  mac.c  xt_DELUDE.c  xt_DNETMAP.c  xt_IPMARK.h  xt_LOGMARK.c  xt_LOGMARK.h  xt_condition.c  xt_geoip.c  xt_gradm.h  xt_psd.c
out-of-tree/xtables/xtables-addons-2.12/extensions/ACCOUNT/: .gitignore  Makefile.am  Mbuild
out-of-tree/xtables/xtables-addons-2.12/extensions/pknock/: .gitignore  Mbuild  gen_hmac.py  pknlusr.c  xt_pknock.c
out-of-tree/xtables/xtables-addons-2.12/geoip/: Makefile.am  xt_geoip_dl
tools/16ton/dpf/libdlo-0.1.2/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  mkdox.sh
tools/16ton/dpf/libdlo-0.1.2/src/: Makefile  dlo_base.h  dlo_data.h  dlo_defs.h  dlo_grfx.c  dlo_grfx.h  dlo_mode.c  dlo_mode.h  dlo_structs.h  dlo_usb.c  dlo_usb.h  libdlo.c  libdlo.h
tools/16ton/dpf/libdlo-0.1.2/src/.deps/: libdlo_la-dlo_grfx.Plo  libdlo_la-dlo_mode.Plo  libdlo_la-dlo_usb.Plo  libdlo_la-libdlo.Plo
tools/16ton/dpf/libdlo-0.1.2/test/: Makefile  Makefile.am  Makefile.in  test1.c
tools/16ton/dpf/libdlo-0.1.2/test/.deps/: test1.Po
tools/16ton/mtp_adb/mtp-server/: CMakeLists.txt
tools/16ton/mtp_adb/mtp-server/debian/: changelog  clean  control  debhelper-build-stamp  files  libmtpserver-dev.install  libmtpserver1.install  libmtpserver1.substvars  mtp-server.1  mtp-server.conf  mtp-server.install  mtp-server.manpages  mtp-server.substvars  mtp-state.conf  rules
tools/16ton/mtp_adb/mtp-server/debian/libmtpserver-dev/DEBIAN/: control  md5sums
tools/16ton/mtp_adb/mtp-server/debian/libmtpserver-dev/usr/include/mtp/: MtpDevice.h
tools/16ton/mtp_adb/mtp-server/debian/libmtpserver-dev/usr/share/doc/libmtpserver-dev/: copyright
tools/16ton/mtp_adb/mtp-server/debian/libmtpserver1/DEBIAN/: control  md5sums  shlibs
tools/16ton/mtp_adb/mtp-server/debian/libmtpserver1/usr/lib/: libmtpserver.so.1.0.0
tools/16ton/mtp_adb/mtp-server/debian/mtp-server/DEBIAN/: conffiles  control  md5sums
tools/16ton/mtp_adb/mtp-server/debian/tmp/usr/lib/: libmtpserver.so.1  libmtpserver.so.1.0.0
tools/16ton/mtp_adb/mtp-server/include/: MtpServer.h
tools/16ton/mtp_adb/mtp-server/libusbhost/: CMakeLists.txt
tools/16ton/mtp_adb/mtp-server/libusbhost/src/: usbhost.c
tools/16ton/mtp_adb/mtp-server/obj-x86_64-linux-gnu/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
tools/16ton/mtp_adb/mtp-server/obj-x86_64-linux-gnu/Testing/Temporary/: CTestCostData.txt
tools/16ton/mtp_adb/mtp-server/obj-x86_64-linux-gnu/libusbhost/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/16ton/mtp_adb/mtp-server/obj-x86_64-linux-gnu/po/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/16ton/mtp_adb/mtp-server/obj-x86_64-linux-gnu/server/: CTestTestfile.cmake  Makefile  cmake_install.cmake  mtp-server
tools/16ton/mtp_adb/mtp-server/obj-x86_64-linux-gnu/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-debug  test-packet  test-property  test-server  test-storage  test-utils
tools/16ton/mtp_adb/mtp-server/po/: CMakeLists.txt  fr.po  mtp-server.pot
tools/16ton/mtp_adb/mtp-server/server/: CMakeLists.txt  UbuntuMtpDatabase.h  server.cpp
tools/16ton/mtp_adb/mtp-server/src/: MtpDataPacket.cpp  MtpDevice.cpp  MtpDeviceInfo.cpp  MtpEventPacket.cpp  MtpObjectInfo.cpp  MtpPacket.cpp  MtpProperty.cpp  MtpRequestPacket.cpp  MtpResponsePacket.cpp  MtpServer.cpp  MtpStorage.cpp  MtpStorageInfo.cpp
tools/16ton/mtp_adb/mtp-server/tests/: CMakeLists.txt  MockMtpDatabase.h  TestMtpDebug.cpp  TestMtpPacket.cpp  TestMtpProperty.cpp  TestMtpServer.cpp  TestMtpStorage.cpp  TestMtpUtils.cpp
tools/16ton/parport/pport-0.6.9/: AUTHORS  ChangeLog  NEWS  README  THANKS  config.h  config.h.in  config.status  configure  configure.in  makefile  makefile.am  makefile.in  regen.sh
tools/16ton/parport/pport-0.6.9/doc/: Franky-HOWTO  README  makefile.am
tools/16ton/parport/pport-0.6.9/include/: defext.h  defines.h  errorp.h  help.h  makefile.am  pperror.h
tools/16ton/parport/pport-0.6.9/man/: makefile  makefile.am  makefile.in  pport.1  pportd.1
tools/16ton/parport/pport-0.6.9/samples/: Makefile  Makefile.am  Makefile.in  pportd.conf
tools/16ton/parport/pport-0.6.9/src/: makefile  makefile.am  makefile.in  ppin.c  pport  pport.c  pportd  pportd.c  ppout.c  share.c
(+1484 files in other folders)
